--- a/Analysis_scripts/Prospective/Metadata_Analysis.Rmd
+++ b/Analysis_scripts/Prospective/Metadata_Analysis.Rmd
@@ -6,113 +6,19 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-library(readxl)
 library(dplyr)
 
+
+
+Combined_data <- readRDS("~/Private/CHAPTER_4/Revised_data/Combined_data_PATH_Pro.RDS")
+
+Breast_data <- Combined_data %>% filter(Type=="Breast")
+CRC_data <- Combined_data %>% filter(Type=="Colon")
+Prostate_data <- Combined_data %>% filter(Type=="Prostate")
 ```
 
 
 
-```{r}
-remove_non_matching_caseIDS <- function(df){
-  
-    ## remove controls that don;t have associated case samples b/c they were removed due to poor sequencing
-    df_cases <- df %>% filter(Case.Control=="Case")
-    CaseIDs <- df_cases$CaseID
-    df_filt <- df %>% filter(CaseID %in% CaseIDs)
-
-    ## remove cases that don't have any controls associtated because they were removed due to poor sequencing 
-    ## these cases can only happen when the total number of samples with that CASEID is 1 
-    Summ_data <- df_filt %>% group_by(CaseID) %>% summarize(n())
-    remove_cases <- Summ_data$CaseID[which(Summ_data$`n()`==1)]
-    
-    if(length(remove_cases!=0)){
-      message(paste0("removing ", remove_cases, " Case samples due to no controls"))
-      test <- df_filt[-which(df_filt$CaseID %in% remove_cases),]
-      return(test)  
-    }
-
-    
-    return(df_filt)
-  
-}
-
-match_age_diff <- function(df){
-  
-  case_df <- df %>% filter(Case.Control=="Case")
-  for(i in 1:nrow(df)){
-    
-    if(((is.na(df[i,'age_diff']) | df[i,'age_diff'] < 0)) & df[i,'Case.Control']=="Control"){
-      temp_caseID <- df[i,'CaseID']
-      message(temp_caseID)
-      temp_age_diff <- case_df$age_diff[which(case_df$CaseID==temp_caseID)]
-      message(temp_age_diff)
-      df[i,'age_diff'] <- temp_age_diff
-    }
-  }
-  return(df)
-}
-
-#above functions were already tested in the ATP metadata analysis
-```
-
-
-
-```{r}
-Metadata_Breast <- readRDS("~/Private/CHAPTER_4/Prospec/PATH/Metadata/Metadata_Breast.RDS")
-Metadata_Breast$Case_Control <- as.character(Metadata_Breast$`Case/Control`)
-Metadata_Prostate <- readRDS("~/Private/CHAPTER_4/Prospec/PATH/Metadata/Metadata_Prostate.RDS")
-Metadata_Prostate$Case_Control <- as.character(Metadata_Prostate$`Case/Control`)
-Metadata_CRC <- readRDS("~/Private/CHAPTER_4/Prospec/PATH/Metadata/Metadata_CRC.RDS")
-Metadata_CRC$Case_Control <- as.character(Metadata_CRC$`Case/Control`)
-
-Metadata_Breast$Case.Control <- ifelse(Metadata_Breast$`CASE/CONTROL`==1, "Case", "Control")
-Metadata_Prostate$Case.Control <- ifelse(Metadata_Prostate$`CASE/CONTROL`==1, "Case", "Control")
-Metadata_CRC$Case.Control <- ifelse(Metadata_CRC$`CASE/CONTROL`==1, "Case", "Control")
-
-Metadata_Breast$Case.Control <- factor(Metadata_Breast$Case.Control, levels=c("Control", "Case"))
-Metadata_Prostate$Case.Control <- factor(Metadata_Prostate$Case.Control, levels=c("Control", "Case"))
-Metadata_CRC$Case.Control <- factor(Metadata_CRC$Case.Control, levels=c("Control", "Case"))
-
-Faiths <- read.table("~/Private/Future_Cancer_Project/Cancer_Samples/diversity_3000/raw_alpha/faiths/alpha-diversity.tsv",
-                     header=T, row.names=1)
-Evenness <- read.table("~/Private/Future_Cancer_Project/Cancer_Samples/diversity_3000/raw_alpha/evenness/alpha-diversity.tsv",
-                        header=T, row.names = 1)
-
-Richness <- read.table("~/Private/Future_Cancer_Project/Cancer_Samples/diversity_3000/raw_alpha/richness/alpha-diversity.tsv", 
-                       header=T, row.names = 1)
-
-Shannon <- read.table("~/Private/Future_Cancer_Project/Cancer_Samples/diversity_3000/raw_alpha/shannon/alpha-diversity.tsv",
-                      header=T, row.names = 1)
-
-Alpha_data <- cbind(Faiths, Evenness, Richness, Shannon)
-
-Alpha_data$`Saliva ID Ship` <- rownames(Alpha_data)
-
-Alpha_Breast <- Alpha_data %>% inner_join(Metadata_Breast, by="Saliva ID Ship")
-Alpha_Prostate <- Alpha_data %>% inner_join(Metadata_Prostate, by="Saliva ID Ship")
-Alpha_CRC  <- Alpha_data %>% inner_join(Metadata_CRC, by="Saliva ID Ship")
-
-Alpha_Breast$X <- Alpha_Breast$`Saliva ID Ship`
-Alpha_Prostate$X <- Alpha_Prostate$`Saliva ID Ship`
-Alpha_CRC$X <- Alpha_CRC$`Saliva ID Ship`
-
-Alpha_Breast$age_diff <- Alpha_Breast$F1_DIS_CANCER1_AGE - Alpha_Breast$SDC_AGE_CALC
-Alpha_Prostate$age_diff <- Alpha_Prostate$F1_DIS_CANCER1_AGE - Alpha_Prostate$SDC_AGE_CALC
-Alpha_CRC$age_diff <- Alpha_CRC$F1_DIS_CANCER1_AGE - Alpha_CRC$SDC_AGE_CALC
-
-Alpha_Breast$Type <- "Breast"
-Alpha_Prostate$Type <- "Prostate"
-Alpha_CRC$Type <- "Colon"
-
-Alpha_Breast <- remove_non_matching_caseIDS(Alpha_Breast)
-Alpha_Prostate <- remove_non_matching_caseIDS(Alpha_Prostate)
-Alpha_CRC <- remove_non_matching_caseIDS(Alpha_CRC)
-
-
-
-
-```
 
 
 ```{r}
