--- a/Revised_Analysis_scripts/Prospective/ATP_Diversity_Analysis_Revised.Rmd
+++ b/Revised_Analysis_scripts/Prospective/ATP_Diversity_Analysis_Revised.Rmd
@@ -21,7 +21,6 @@ library(ggpubr)
 library(rstatix)
 library(vegan)
 
-library(readxl)
 theme_set(theme_cowplot())
 
 
@@ -109,86 +108,11 @@ make_all_alpha_div_plots <- function(df, split_type, main_variable, covariates, 
 
 
 ```{r}
-base_metadata <- readRDS("~/Private/ATP/Metadata/Base_microbiome_metadata.RDS")
-base_metadata$ParticipantKey <- as.character(base_metadata$ParticipantKey)
-rownames(base_metadata) <- base_metadata$researcher
+# Load data
+Combined_data <- readRDS("~/Private/CHAPTER_4/Revised_data/Combined_data_ATP_Pro.RDS")
+Combined_data_filt <- readRDS("~/Private/CHAPTER_4/Revised_data/Combined_data_ATP_Pro_filt.RDS")
 
-
-sheet_names <- c("ACR", "ACR_Treatment", "Core", "Core_Chronic", "HLQ", "Master_Data", "Case_Control_Match", "PANS", "PM_data", "UHLQ", "UHLQ_Cond")
-
-Metadata <- list()
-
-for(i in 1:length(sheet_names)){
-  
-  Metadata[[sheet_names[i]]] <- read_excel("~/Private/ATP/Metadata/ATP_MASTER_DATA.xls", sheet=i)
-  
-}
-
-
-Metadata[[7]]$matchID <- seq(1:207)
-
-case_control_match <- melt(Metadata[[7]][,-3], id.vars = 'matchID')
-
-
-
-Shannon_div <- read.table("~/Private/ATP/Analysis_21_12_01/core-div-3000/raw_alpha/shannon.tsv",
-                          sep="\t", header=T)
-colnames(Shannon_div)[1] <- "researcher"
-
-#faith pd
-faith_pd <- read.table("~/Private/ATP/Analysis_21_12_01/core-div-3000/raw_alpha/faiths_pd.tsv",
-                       sep="\t", header=T)
-colnames(faith_pd)[1] <- "researcher"
-
-#raw richness
-richness <- read.table("~/Private/ATP/Analysis_21_12_01/core-div-3000/raw_alpha/observed_feats.tsv",
-                       sep="\t", header=T)
-colnames(richness)[1] <- "researcher"
-
-#evenness
-evenness <- read.table("~/Private/ATP/Analysis_21_12_01/core-div-3000/raw_alpha/evenness.tsv",
-                       sep="\t", header=T)
-colnames(evenness)[1] <- "researcher"
-
-
-## 40 samples did not reach sequencing requirements.
-Alpha_div <- Shannon_div %>% left_join(faith_pd, by="researcher") %>% left_join(richness, by="researcher") %>% left_join(evenness, by="researcher")
-
-
-Full_data <- Alpha_div %>% inner_join(base_metadata, by="researcher")
-Full_data$Case.Control <- factor(Full_data$ARM.x, levels=c("control", "case"))
-
-
-
-Alpha_Breast <- Full_data %>% filter(Type=="Breast")
-Alpha_Prostate <- Full_data %>% filter(Type=="Prostate")
-Alpha_CRC <- Full_data %>% filter(Type=="Colon") 
-
-Alpha_Breast$X <- Alpha_Breast$researcher
-Alpha_Prostate$X <- Alpha_Prostate$researcher
-Alpha_CRC$X <- Alpha_CRC$researcher
-
-Alpha_Breast$CaseID <- case_control_match$matchID[match(Alpha_Breast$ParticipantKey, case_control_match$value)]
-Alpha_Prostate$CaseID <- case_control_match$matchID[match(Alpha_Prostate$ParticipantKey, case_control_match$value)]
-Alpha_CRC$CaseID <- case_control_match$matchID[match(Alpha_CRC$ParticipantKey, case_control_match$value)]
-
-Alpha_Breast <- remove_non_matching_caseIDS(Alpha_Breast)
-Alpha_Prostate <- remove_non_matching_caseIDS(Alpha_Prostate)
-Alpha_CRC <- remove_non_matching_caseIDS(Alpha_CRC)
-
-Breast_data_comb <- Alpha_Breast %>% select(faith_pd, shannon_entropy, pielou_evenness, observed_features, X, Case.Control, age_diff, Type, CaseID)
-
-Prostate_data_comb <- Alpha_Prostate %>% select(faith_pd, shannon_entropy, pielou_evenness, observed_features, X, Case.Control, age_diff, Type, CaseID)
-
-CRC_data_comb <- Alpha_CRC %>% select(faith_pd, shannon_entropy, pielou_evenness, observed_features, X, Case.Control, age_diff, Type, CaseID)
-
-Combined_data <- rbind(Breast_data_comb, Prostate_data_comb, CRC_data_comb)
-
-Case_data_filt <- Combined_data %>% filter(Case.Control=="case") %>% filter(age_diff <= 4)
-
-Case_time_keep <- Case_data_filt$CaseID
-
-Combined_data_filt <- Combined_data %>% filter(CaseID %in% Case_time_keep)
+Combined_data_filt$X <- as.character(Combined_data_filt$X)
 ```
 
 # Alpha Diversity
@@ -244,6 +168,41 @@ saveRDS(all_cancer_plots, "~/Private/CHAPTER_4/Publication_Markdowns/Display_ite
 
 ```
 
+## Covar analysis
+```{r}
+est_vars <- c("faith_pd", "observed_features", "shannon_entropy", "pielou_evenness")
+
+covar_stat_res <- list()
+covar_stat_res_age <- list()
+unadjusted_res <- list()
+
+
+covars_age <- "`SALIVA AGE` + PARTICIPANT_SEX"
+
+covars_all <- "`SALIVA AGE` + PARTICIPANT_SEX + Comb_WHR + Comb_Height + Comb_Veg"
+
+for(i in est_vars){
+  
+  covar_stat_res[[i]] <- run_lm_comb_data(data=Combined_data, type_split = "Type", main_variable = "Case.Control",  
+                                     covariates = covars_all, 
+                                     estimate_var = i)
+  covar_stat_res_age[[i]] <- run_lm_comb_data(data=Combined_data, type_split = "Type", main_variable = "Case.Control",  
+                                     covariates = covars_age, 
+                                     estimate_var = i)
+  
+  unadjusted_res[[i]] <- run_lm_comb_data(data=Combined_data, type_split = "Type", main_variable = "Case.Control",  
+                                     covariates = NULL, 
+                                     estimate_var = i)
+  
+}
+
+unadjusted_res
+covar_stat_res_age
+
+covar_stat_res
+```
+
+
 
 ## Time filt
 
@@ -283,6 +242,36 @@ lm_alpha_res_rich[[1]]
 
 
 saveRDS(all_cancer_plots_filt, "~/Private/CHAPTER_4/Publication_Markdowns/Display_items/intermediate_RDS2/Pro_ATP_alpha_all_time4.RDS")
+```
+
+
+## Covar filt
+```{r}
+filt_covar_stat_res <- list()
+filt_covar_stat_res_age <- list()
+filt_unadjusted_res <- list()
+
+for(i in est_vars){
+  filt_covar_stat_res[[i]] <- run_lm_comb_data(data=Combined_data_filt, type_split = "Type", main_variable = "Case.Control",  
+                                     covariates = covars_all, 
+                                     estimate_var = i)
+  
+    filt_covar_stat_res_age[[i]] <- run_lm_comb_data(data=Combined_data_filt, type_split = "Type", main_variable = "Case.Control",  
+                                     covariates = covars_age, 
+                                     estimate_var = i)
+    
+    filt_unadjusted_res[[i]] <- run_lm_comb_data(data=Combined_data_filt, type_split = "Type", main_variable = "Case.Control",  
+                                     covariates = NULL, 
+                                     estimate_var = i)
+}
+
+
+filt_unadjusted_res
+
+filt_covar_stat_res_age
+
+filt_covar_stat_res
+
 ```
 
 # Beta Diversity
@@ -387,12 +376,15 @@ make_all_plots_and_adonis <- function(list_dist, list_title, metadata, facet, co
 WEIGHTED_UNIFRAC <- "~/Private/ATP/Analysis_21_12_01/core-div-3000/raw_beta/weighted_unifrac.tsv"
 BRAY_CURTIS <- "~/Private/ATP/Analysis_21_12_01/core-div-3000/raw_beta/bray_curt.tsv"
 UNWEIGHTED_UNIFRAC <- "~/Private/ATP/Analysis_21_12_01/core-div-3000/raw_beta/unweighted_unifrac.tsv"
+RPCA <- "~/Private/ATP/Analysis_21_12_01/core-div-3000/raw_beta/rpca_distance.tsv"
 
 w_unifrac <- read.table(WEIGHTED_UNIFRAC, sep="\t", header=T, row.names = 1, comment.char="", quote="", check.names = F)
 
 bray_curt <- read.table(BRAY_CURTIS, sep="\t", header=T, row.names = 1, comment.char = "", quote="", check.names = F)
 
 u_unifrac <- read.table(UNWEIGHTED_UNIFRAC, sep="\t", header=T, row.names = 1, comment.char="", quote="", check.names = F)
+
+rpca <- read.table(RPCA, sep="\t", header=T, row.names=1, comment.char="", quote="", check.names=F)
 
 Combined_data$Case.Control_type <- as.character(Combined_data$Case.Control)
 
@@ -409,8 +401,12 @@ Combined_data_filt$Case.Control_type[which(Combined_data_filt$Case.Control_type=
 Combined_data$X <- as.character(Combined_data$X)
 
 weighted_uni_comb <- w_unifrac[as.character(Combined_data$X), as.character(Combined_data$X)]
+
 unweighted_uni_comb <- u_unifrac[as.character(Combined_data$X), as.character(Combined_data$X)]
+
 bray_comb <- bray_curt[as.character(Combined_data$X), as.character(Combined_data$X)]
+
+rpca_comb <- rpca[as.character(Combined_data$X), as.character(Combined_data$X)]
 ```
 
 ```{r}
@@ -458,13 +454,15 @@ saveRDS(bray_comb_time_plot, "~/Private/CHAPTER_4/Publication_Markdowns/Display_
 dist_list <- list(
   'W_uni' = weighted_uni_comb,
   'U_uni' =  unweighted_uni_comb,
-  'bray' = bray_comb
+  'bray' = bray_comb,
+  'rpca' = rpca_comb
 )
 
 title_list <- list(
   'W_uni' = "Weighted UniFrac",
   'U_uni' = "Unweighted UniFrac",
-  'bray' = "Bray Curtis"
+  'bray' = "Bray Curtis",
+  'rpca' = " Robust Aitchison"
 )
 
 Breast_data_comb <- Combined_data %>% filter(Type=="Breast")
@@ -474,10 +472,65 @@ Breast_data_comb$Type <- factor(Breast_data_comb$Type)
 Breast_beta_plots <- make_all_plots_and_adonis(list_dist = dist_list, list_title = title_list, metadata=Breast_data_comb, facet="Type", covariate = NULL,
                                                main_variable = "Case.Control")
 
-Breast_beta_plots[[2]]
+Breast_beta_plots
 
-saveRDS(Breast_beta_plots, "~/Private/CHAPTER_4/Publication_Markdowns/Display_items/intermediate_RDS2/Pro_ATP_breast_beta.RDS")
+saveRDS(Breast_beta_plots, "~/Private/CHAPTER_4/Revised_Figures/RDS/ATP_Pro_Breast_beta_all.RDS")
 ```
+
+### adjusted results
+```{r}
+Br_unadjusted_stat <- list()
+Br_adjusted_stat_age <- list()
+Br_adjusted_stat <- list()
+
+covars_age <- "`SALIVA AGE` + PARTICIPANT_SEX"
+
+covars_all <- "`SALIVA AGE` + PARTICIPANT_SEX + Comb_WHR + Comb_Height + Comb_Veg"
+
+#need to filter metadata so that it only has samples that are fully complete...
+
+Breast_data_comb_noNA <- Breast_data_comb[-which(is.na(Breast_data_comb$Comb_Height)),]
+Breast_data_comb_noNA <- Breast_data_comb_noNA[-which(is.na(Breast_data_comb_noNA$Comb_Veg)),]
+
+Breast_data_comb_noNA <- Breast_data_comb_noNA[-which(is.na(Breast_data_comb_noNA$Comb_WHR)),]
+
+
+dim(Breast_data_comb_noNA)
+dim(Breast_data_comb)
+table(Breast_data_comb$Case.Control)
+table(Breast_data_comb_noNA$Case.Control)
+
+for(i in 1:length(dist_list)){
+  
+  Br_unadjusted_stat[[names(dist_list)[[i]]]] <- run_adonis_by_facet(dist = dist_list[[i]], meta = Breast_data_comb, 
+                                                 facet = "Type", main_variable = "Case.Control", 
+                                                 covariates = NULL)
+  
+  Br_adjusted_stat_age[[names(dist_list)[[i]]]] <- run_adonis_by_facet(dist = dist_list[[i]], meta = Breast_data_comb, 
+                                                 facet = "Type", main_variable = "Case.Control", 
+                                                 covariates = covars_age)
+  
+  ## this becomes problematic when not all features have that data...
+  Br_adjusted_stat[[names(dist_list)[[i]]]] <- run_adonis_by_facet(dist = dist_list[[i]], meta = Breast_data_comb_noNA, 
+                                                 facet = "Type", main_variable = "Case.Control", 
+                                                 covariates = covars_all)
+  
+  
+  
+}
+
+names(Br_unadjusted_stat)
+Br_unadjusted_stat
+
+names(Br_adjusted_stat_age)
+Br_adjusted_stat_age
+
+names(Br_adjusted_stat)
+Br_adjusted_stat
+
+```
+
+
 
 ```{r}
 Prostate_data_comb <- Combined_data %>% filter(Type=="Prostate")
@@ -486,8 +539,59 @@ Prostate_data_comb$Type <- factor(Prostate_data_comb$Type)
 
 Prostate_beta_plots <- make_all_plots_and_adonis(list_dist = dist_list, list_title = title_list, metadata=Prostate_data_comb, facet="Type", covariate = NULL,
                                                  main_variable="Case.Control")
-saveRDS(Prostate_beta_plots, "~/Private/CHAPTER_4/Publication_Markdowns/Display_items/intermediate_RDS2/Pro_ATP_prostate_beta.RDS")
+
+
+saveRDS(Prostate_beta_plots, "~/Private/CHAPTER_4/Revised_Figures/RDS/ATP_Pro_Prostate_beta_all.RDS")
 ```
+
+### adjusted
+```{r}
+Pr_unadjusted_stat <- list()
+Pr_adjusted_stat_age <- list()
+Pr_adjusted_stat <- list()
+
+
+#need to filter metadata so that it only has samples that are fully complete...
+
+Prostate_data_comb_noNA <- Prostate_data_comb[-which(is.na(Prostate_data_comb$Comb_Height)),]
+
+Prostate_data_comb_noNA <- Prostate_data_comb_noNA[-which(is.na(Prostate_data_comb_noNA$Comb_Veg)),]
+
+Prostate_data_comb_noNA <- Prostate_data_comb_noNA[-which(is.na(Prostate_data_comb_noNA$Comb_WHR)),]
+
+table(Prostate_data_comb$Case.Control)
+table(Prostate_data_comb_noNA$Case.Control)
+
+for(i in 1:length(dist_list)){
+  
+  Pr_unadjusted_stat[[names(dist_list)[[i]]]] <- run_adonis_by_facet(dist = dist_list[[i]], meta = Prostate_data_comb, 
+                                                 facet = "Type", main_variable = "Case.Control", 
+                                                 covariates = NULL)
+  
+  Pr_adjusted_stat_age[[names(dist_list)[[i]]]] <- run_adonis_by_facet(dist = dist_list[[i]], meta = Prostate_data_comb, 
+                                                 facet = "Type", main_variable = "Case.Control", 
+                                                 covariates = covars_age)
+  
+  ## this becomes problematic when not all features have that data...
+  Pr_adjusted_stat[[names(dist_list)[[i]]]] <- run_adonis_by_facet(dist = dist_list[[i]], meta = Prostate_data_comb_noNA, 
+                                                 facet = "Type", main_variable = "Case.Control", 
+                                                 covariates = covars_all)
+  
+  
+  
+}
+
+names(Pr_unadjusted_stat)
+Pr_unadjusted_stat
+
+names(Pr_adjusted_stat_age)
+Pr_adjusted_stat_age
+
+names(Pr_adjusted_stat)
+Pr_adjusted_stat
+
+```
+
 
 ```{r}
 CRC_data_comb <- Combined_data %>% filter(Type=="Colon")
@@ -496,28 +600,75 @@ CRC_data_comb$Type <- factor(CRC_data_comb$Type)
 
 CRC_beta_plots <- make_all_plots_and_adonis(list_dist = dist_list, list_title = title_list, metadata=CRC_data_comb, facet="Type", covariate = NULL,
                                             main_variable = "Case.Control")
-saveRDS(CRC_beta_plots, "~/Private/CHAPTER_4/Publication_Markdowns/Display_items/intermediate_RDS2/Pro_ATP_CRC_beta.RDS")
+
+saveRDS(CRC_beta_plots, "~/Private/CHAPTER_4/Revised_Figures/RDS/ATP_Pro_CRC_beta_all.RDS")
+```
+
+```{r}
+CRC_unadjusted_stat <- list()
+CRC_adjusted_stat_age <- list()
+CRC_adjusted_stat <- list()
+
+#need to filter metadata so that it only has samples that are fully complete...
+CRC_data_comb_noNA <- CRC_data_comb[-which(is.na(CRC_data_comb$Comb_Height)),]
+
+CRC_data_comb_noNA <- CRC_data_comb_noNA[-which(is.na(CRC_data_comb_noNA$Comb_Veg)),]
+
+CRC_data_comb_noNA <- CRC_data_comb_noNA[-which(is.na(CRC_data_comb_noNA$Comb_WHR)),]
+
+table(CRC_data_comb$Case.Control)
+table(CRC_data_comb_noNA$Case.Control)
+
+for(i in 1:length(dist_list)){
+  
+  CRC_unadjusted_stat[[names(dist_list)[[i]]]] <- run_adonis_by_facet(dist = dist_list[[i]], meta = CRC_data_comb, 
+                                                 facet = "Type", main_variable = "Case.Control", 
+                                                 covariates = NULL)
+  
+  CRC_adjusted_stat_age[[names(dist_list)[[i]]]] <- run_adonis_by_facet(dist = dist_list[[i]], meta = CRC_data_comb, 
+                                                 facet = "Type", main_variable = "Case.Control", 
+                                                 covariates = covars_age)
+  
+  ## this becomes problematic when not all features have that data...
+  CRC_adjusted_stat[[names(dist_list)[[i]]]] <- run_adonis_by_facet(dist = dist_list[[i]], meta = CRC_data_comb_noNA, 
+                                                 facet = "Type", main_variable = "Case.Control", 
+                                                 covariates = covars_all)
+  
+  
+  
+}
+
+names(CRC_unadjusted_stat)
+CRC_unadjusted_stat
+
+CRC_adjusted_stat_age
+
+
+CRC_adjusted_stat
 ```
 
 
 ```{r}
-Breast_beta_plots <- readRDS("~/Private/CHAPTER_4/Publication_Markdowns/Display_items/intermediate_RDS2/Pro_ATP_breast_beta.RDS")
-Prostate_beta_plots <- readRDS("~/Private/CHAPTER_4/Publication_Markdowns/Display_items/intermediate_RDS2/Pro_ATP_prostate_beta.RDS")
-CRC_beta_plots <- readRDS("~/Private/CHAPTER_4/Publication_Markdowns/Display_items/intermediate_RDS2/Pro_ATP_CRC_beta.RDS")
+Breast_beta_plots <- readRDS("~/Private/CHAPTER_4/Revised_Figures/RDS/ATP_Pro_Breast_beta_all.RDS")
+Prostate_beta_plots <- readRDS("~/Private/CHAPTER_4/Revised_Figures/RDS/ATP_Pro_Prostate_beta_all.RDS")
+CRC_beta_plots <- readRDS("~/Private/CHAPTER_4/Revised_Figures/RDS/ATP_Pro_CRC_beta_all.RDS")
 
 Breast_beta_plot <- plot_grid(#Breast_beta_plots[[1]][[1]] + theme_cowplot() + theme(legend.position = "none"),
                               Breast_beta_plots[[1]][[2]] + theme_cowplot() + theme(legend.position = "none"),
                               Breast_beta_plots[[1]][[3]] + theme_cowplot() + theme(legend.position = "none"),
+                              Breast_beta_plots[[1]][[4]] + theme_cowplot() + theme(legend.position = "none"),
                               nrow=1)
 
 Prostate_beta_plot <- plot_grid(#Prostate_beta_plots[[1]][[1]] + theme_cowplot() + theme(legend.position = "none"),
                                 Prostate_beta_plots[[1]][[2]] + theme_cowplot() + theme(legend.position = "none"),
                                 Prostate_beta_plots[[1]][[3]] + theme_cowplot() + theme(legend.position = "none"),
+                                Prostate_beta_plots[[1]][[4]] + theme_cowplot() + theme(legend.position = "none"),
                                 nrow=1)
 
 CRC_beta_plot <- plot_grid(#CRC_beta_plots[[1]][[1]] + theme_cowplot() + theme(legend.position = "none"),
                            CRC_beta_plots[[1]][[2]] + theme_cowplot() + theme(legend.position = "none"),
                            CRC_beta_plots[[1]][[3]] + theme_cowplot() + theme(legend.position = "none"),
+                           CRC_beta_plots[[1]][[4]] + theme_cowplot() + theme(legend.position = "none"),
                            nrow=1)
 
 Sup_beta_ATP <- plot_grid(Breast_beta_plot, Prostate_beta_plot, CRC_beta_plot, nrow=3,
@@ -529,6 +680,9 @@ Sup_beta_ATP_leg <- plot_grid(Sup_beta_ATP,
                               rel_widths = c(1,.1))
 
 Sup_beta_ATP_leg
+
+ggsave("~/Private/CHAPTER_4/Revised_Figures/Display_items/Supplemental/ATP_Pro_beta_sup.pdf",
+       width=9, height=9)
 ```
 
 ### time fitl
@@ -544,6 +698,59 @@ saveRDS(Breast_beta_plots_time4, "~/Private/CHAPTER_4/Publication_Markdowns/Disp
 ```
 
 ```{r}
+Br_unadjusted_stat <- list()
+Br_adjusted_stat_age <- list()
+Br_adjusted_stat <- list()
+
+covars_age <- "`SALIVA AGE` + PARTICIPANT_SEX"
+
+covars_all <- "`SALIVA AGE` + PARTICIPANT_SEX + Comb_WHR + Comb_Height + Comb_Veg"
+
+#need to filter metadata so that it only has samples that are fully complete...
+
+Breast_data_comb_noNA <- Breast_data_comb[-which(is.na(Breast_data_comb$Comb_Height)),]
+Breast_data_comb_noNA <- Breast_data_comb_noNA[-which(is.na(Breast_data_comb_noNA$Comb_Veg)),]
+
+Breast_data_comb_noNA <- Breast_data_comb_noNA[-which(is.na(Breast_data_comb_noNA$Comb_WHR)),]
+
+
+dim(Breast_data_comb_noNA)
+dim(Breast_data_comb)
+table(Breast_data_comb$Case.Control)
+table(Breast_data_comb_noNA$Case.Control)
+
+for(i in 1:length(dist_list)){
+  
+  Br_unadjusted_stat[[names(dist_list)[[i]]]] <- run_adonis_by_facet(dist = dist_list[[i]], meta = Breast_data_comb, 
+                                                 facet = "Type", main_variable = "Case.Control", 
+                                                 covariates = NULL)
+  
+  Br_adjusted_stat_age[[names(dist_list)[[i]]]] <- run_adonis_by_facet(dist = dist_list[[i]], meta = Breast_data_comb, 
+                                                 facet = "Type", main_variable = "Case.Control", 
+                                                 covariates = covars_age)
+  
+  ## this becomes problematic when not all features have that data...
+  Br_adjusted_stat[[names(dist_list)[[i]]]] <- run_adonis_by_facet(dist = dist_list[[i]], meta = Breast_data_comb_noNA, 
+                                                 facet = "Type", main_variable = "Case.Control", 
+                                                 covariates = covars_all)
+  
+  
+  
+}
+
+names(Br_unadjusted_stat)
+Br_unadjusted_stat
+
+names(Br_adjusted_stat_age)
+Br_adjusted_stat_age
+
+names(Br_adjusted_stat)
+Br_adjusted_stat
+
+```
+
+
+```{r}
 Prostate_data_comb <- Combined_data_filt %>% filter(Type=="Prostate")
 Prostate_data_comb$Case.Control_type <- Prostate_data_comb$Case.Control
 Prostate_data_comb$Type <- factor(Prostate_data_comb$Type)
@@ -552,6 +759,52 @@ Prostate_beta_plots_time4 <- make_all_plots_and_adonis(list_dist = dist_list, li
                                                        main_variable = "Case.Control")
 saveRDS(Prostate_beta_plots_time4, "~/Private/CHAPTER_4/Publication_Markdowns/Display_items/intermediate_RDS2/Pro_ATP_prostate_beta_time4.RDS")
 
+```
+
+```{r}
+Pr_unadjusted_stat <- list()
+Pr_adjusted_stat_age <- list()
+Pr_adjusted_stat <- list()
+
+
+#need to filter metadata so that it only has samples that are fully complete...
+
+Prostate_data_comb_noNA <- Prostate_data_comb[-which(is.na(Prostate_data_comb$Comb_Height)),]
+
+Prostate_data_comb_noNA <- Prostate_data_comb_noNA[-which(is.na(Prostate_data_comb_noNA$Comb_Veg)),]
+
+Prostate_data_comb_noNA <- Prostate_data_comb_noNA[-which(is.na(Prostate_data_comb_noNA$Comb_WHR)),]
+
+table(Prostate_data_comb$Case.Control)
+table(Prostate_data_comb_noNA$Case.Control)
+
+for(i in 1:length(dist_list)){
+  
+  Pr_unadjusted_stat[[names(dist_list)[[i]]]] <- run_adonis_by_facet(dist = dist_list[[i]], meta = Prostate_data_comb, 
+                                                 facet = "Type", main_variable = "Case.Control", 
+                                                 covariates = NULL)
+  
+  Pr_adjusted_stat_age[[names(dist_list)[[i]]]] <- run_adonis_by_facet(dist = dist_list[[i]], meta = Prostate_data_comb, 
+                                                 facet = "Type", main_variable = "Case.Control", 
+                                                 covariates = covars_age)
+  
+  ## this becomes problematic when not all features have that data...
+  Pr_adjusted_stat[[names(dist_list)[[i]]]] <- run_adonis_by_facet(dist = dist_list[[i]], meta = Prostate_data_comb_noNA, 
+                                                 facet = "Type", main_variable = "Case.Control", 
+                                                 covariates = covars_all)
+  
+  
+  
+}
+
+names(Pr_unadjusted_stat)
+Pr_unadjusted_stat
+
+names(Pr_adjusted_stat_age)
+Pr_adjusted_stat_age
+
+names(Pr_adjusted_stat)
+Pr_adjusted_stat
 ```
 
 ```{r}
@@ -565,38 +818,107 @@ CRC_beta_plots_time4 <- make_all_plots_and_adonis(list_dist = dist_list, list_ti
 saveRDS(CRC_beta_plots_time4, "~/Private/CHAPTER_4/Publication_Markdowns/Display_items/intermediate_RDS2/Pro_ATP_CRC_beta_time4.RDS")
 ```
 
+```{r}
+CRC_unadjusted_stat <- list()
+CRC_adjusted_stat_age <- list()
+CRC_adjusted_stat <- list()
+
+#need to filter metadata so that it only has samples that are fully complete...
+CRC_data_comb_noNA <- CRC_data_comb[-which(is.na(CRC_data_comb$Comb_Height)),]
+
+CRC_data_comb_noNA <- CRC_data_comb_noNA[-which(is.na(CRC_data_comb_noNA$Comb_WHR)),]
+
+table(CRC_data_comb$Case.Control)
+table(CRC_data_comb_noNA$Case.Control)
+
+for(i in 1:length(dist_list)){
+  
+  CRC_unadjusted_stat[[names(dist_list)[[i]]]] <- run_adonis_by_facet(dist = dist_list[[i]], meta = CRC_data_comb, 
+                                                 facet = "Type", main_variable = "Case.Control", 
+                                                 covariates = NULL)
+  
+  CRC_adjusted_stat_age[[names(dist_list)[[i]]]] <- run_adonis_by_facet(dist = dist_list[[i]], meta = CRC_data_comb, 
+                                                 facet = "Type", main_variable = "Case.Control", 
+                                                 covariates = covars_age)
+  
+  ## this becomes problematic when not all features have that data...
+  CRC_adjusted_stat[[names(dist_list)[[i]]]] <- run_adonis_by_facet(dist = dist_list[[i]], meta = CRC_data_comb_noNA, 
+                                                 facet = "Type", main_variable = "Case.Control", 
+                                                 covariates = covars_all)
+  
+  
+  
+}
+
+names(CRC_unadjusted_stat)
+CRC_unadjusted_stat
+
+CRC_adjusted_stat_age
+
+
+CRC_adjusted_stat
+```
+
 #time vs. alpha
 
 ```{r}
-Case_data <- Combined_data %>% filter(Case.Control=="case")
+Combined_data %>% filter(Case.Control=="control", Type=="Breast") %>% summarize(mean(faith_pd))
+Combined_data %>% filter(Case.Control=="control", Type=="Prostate") %>% summarize(mean(faith_pd))
+Combined_data %>% filter(Case.Control=="control", Type=="Colon") %>% summarize(mean(faith_pd))
 
-Combined_data %>% filter(Case.Control=="control") %>% summarize(mean(faith_pd))
+Case_samples <- Combined_data %>% filter(Case.Control=="case")
+
+Case_samples$mean_faith <- 10.104
+Case_samples$mean_faith[which(Case_samples$Type=="Prostate")] <- 10.648
+Case_samples$mean_faith[which(Case_samples$Type=="Colon")] <- 10.200
 
 
-faiths_cor_data <- ggplot(Case_data, aes(x=age_diff, y=faith_pd)) + geom_point() +
-  facet_grid(~ Type) + geom_line(y=10.32, color="red", linetype="dashed") +
+
+faiths_cor_data <- ggplot(Case_samples, aes(x=age_diff, y=faith_pd)) + geom_point() +
+  facet_grid(~ Type) + geom_line(aes(y=mean_faith), color="red", linetype="dashed") +
   ylab("Faith's Phylogenetic Diversity") + xlab("Time since diagnosis") +
   theme_cowplot()
 faiths_cor_data
 
-Combined_data %>% filter(Case.Control=="control") %>% summarize(mean(observed_features))
+Combined_data %>% filter(Case.Control=="control", Type=="Breast") %>% summarize(mean(observed_features))
+Combined_data %>% filter(Case.Control=="control", Type=="Prostate") %>% summarize(mean(observed_features))
+Combined_data %>% filter(Case.Control=="control", Type=="Colon") %>% summarize(mean(observed_features))
 
-richness_cor_data <- ggplot(Case_data, aes(x=age_diff, y=observed_features)) + geom_point() +
-  facet_grid(~ Type) + geom_line(y=98.625, color="red", linetype="dashed") +
+Case_samples$mean_rich <- 97.976
+Case_samples$mean_rich[which(Case_samples$Type=="Prostate")] <- 100.484
+Case_samples$mean_rich[which(Case_samples$Type=="Colon")] <- 95.636
+
+
+richness_cor_data <- ggplot(Case_samples, aes(x=age_diff, y=observed_features)) + geom_point() +
+  facet_grid(~ Type) + geom_line(aes(y=mean_rich), color="red", linetype="dashed") +
   ylab("Richness") + xlab("Time since diagnosis") + theme_cowplot()
 
 
-Combined_data %>% filter(Case.Control=="control") %>% summarize(mean(shannon_entropy))
+Combined_data %>% filter(Case.Control=="control", Type=="Breast") %>% summarize(mean(shannon_entropy))
+Combined_data %>% filter(Case.Control=="control", Type=="Prostate") %>% summarize(mean(shannon_entropy))
+Combined_data %>% filter(Case.Control=="control", Type=="Colon") %>% summarize(mean(shannon_entropy))
 
-shannon_cor_data <- ggplot(Case_data, aes(x=age_diff, y=shannon_entropy)) + geom_point() +
-  facet_grid(~ Type) + geom_line(y=4.29, color="red", linetype="dashed") +
+Case_samples$mean_shannon <- 4.257
+Case_samples$mean_shannon[which(Case_samples$Type=="Prostate")] <- 4.349
+Case_samples$mean_shannon[which(Case_samples$Type=="Colon")] <- 4.268
+
+shannon_cor_data <- ggplot(Case_samples, aes(x=age_diff, y=shannon_entropy)) + geom_point() +
+  facet_grid(~ Type) + geom_line(aes(y=mean_shannon), color="red", linetype="dashed") +
   ylab("Shannon Diversity") + xlab("Time since diagnosis") + theme_cowplot()
 
 
-Combined_data %>% filter(Case.Control=="control") %>% summarize(mean(pielou_evenness))
+Combined_data %>% filter(Case.Control=="control", Type=="Breast") %>% summarize(mean(pielou_evenness))
+Combined_data %>% filter(Case.Control=="control", Type=="Prostate") %>% summarize(mean(pielou_evenness))
+Combined_data %>% filter(Case.Control=="control", Type=="Colon") %>% summarize(mean(pielou_evenness))
 
-even_cor_data <- ggplot(Case_data, aes(x=age_diff, y=pielou_evenness)) + geom_point() +
-  facet_grid(~ Type) + geom_line(y=0.652, color="red", linetype="dashed") +
+
+Case_samples$mean_even <- 0.647
+Case_samples$mean_even[which(Case_samples$Type=="Prostate")] <- 0.658
+Case_samples$mean_even[which(Case_samples$Type=="Colon")] <- 0.651
+
+
+even_cor_data <- ggplot(Case_samples, aes(x=age_diff, y=pielou_evenness)) + geom_point() +
+  facet_grid(~ Type) + geom_line(aes(y=mean_even), color="red", linetype="dashed") +
   ylab("Evenness") + xlab("Time since diagnosis") + theme_cowplot()
 
 ```
@@ -605,6 +927,10 @@ even_cor_data <- ggplot(Case_data, aes(x=age_diff, y=pielou_evenness)) + geom_po
 ```{r}
 cor_plot_fin <- plot_grid(faiths_cor_data, richness_cor_data, shannon_cor_data, even_cor_data)
 cor_plot_fin
+
+ggsave("~/Private/CHAPTER_4/Revised_Figures/Display_items/Supplemental/ATP_Pro_alpha_cor.pdf",
+       width=9, height=9)
+
 ```
 
 ```{r}
